processed/jira/txt/LU/LU-16520.txt
Key:        LU-16520
Summary:    CentOS 7.6 build failure on strscpy. Move strscpy to lnet/include/lnet/lib-types.h
Link:       https://jira.whamcloud.com/browse/LU-16520
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Wed, 1 Feb 2023 06:50:44 +0000
Updated:    Tue, 5 Nov 2024 14:17:36 +0000
Resolved:   Tue, 14 Feb 2023 13:33:52 +0000

--- Description ---
Testing on CentOS 7.6 build fails with:

/home/shaun/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c: In function ‘kiblnd_startup’:
/home/shaun/lustre-release/lnet/klnds/o2iblnd/o2iblnd.c:3608:3: error: implicit declaration of function ‘strscpy’ [-Werror=implicit-function-declaration]
   strscpy(ifname, ifaces[i].li_name, sizeof(ifname));
   ^

Move strscpy to lnet/include/lnet/lib-types.h so it is available to lnet/klnds/o2iblnd/o2iblnd.c

--- Comment (gerrit, Tue, 5 Nov 2024 06:29:50 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/56766/

Subject: LU-16520 build: Move strscpy to libcfs common header

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 

Commit: 9a2c00cff496c0fbf9e176a8a3dce93741101bf8

--- Comment (gerrit, Wed, 23 Oct 2024 06:29:13 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/56766

Subject: LU-16520 build: Move strscpy to libcfs common header

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 1

Commit: bf672a9e4d1d6d1051438a4bf65bc174a03cb8fb

--- Comment (pjones, Tue, 14 Feb 2023 13:33:52 +0000) ---
Landed for 2.16

--- Comment (gerrit, Tue, 14 Feb 2023 06:05:49 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/49863/

Subject: LU-16520 build: Move strscpy to libcfs common header

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 7fe7f4ca06b9c8d128f7ba36988e36f8141ed53d

--- Comment (gerrit, Wed, 1 Feb 2023 15:47:32 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/49863

Subject: LU-16520 build: Move strscpy to common lnet header

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 374db0db7d81e88a3ec2de1d4acdb06edfcb2369
